0030761: Application Framework - HOMEDRIVE and TEMP are undefined on UWP

Avoid CDF_Stroe to find default folder since there is no case where this folder does not reset to exact value given by the user.
Also, remove the exception raising for the case this method is called from outside.